@@ -1,6 +1,7 @@
 0.52 2023-11-29
         - Update Piwik dependency to point to matomo.js. (diewald)
         - Add addon to title and description. (diewald)
+        - Improve Dockerfile to enable docker-slim. (diewald)
 
 0.51 2023-09-27
         - Support defined log file in configuration. (diewald)
